update the file

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ figure {
 		</label>
 	</div>
 
-	<div class="news_paper_location">Southern Africa's Top News - <span id="time"></span></div>
+	<div class="news_paper_location">World's Top News - <span id="time"></span></div>
 </header>
 
 <section class="the-grid-section">
