change it to the correct grammar

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ figure {
 <header>
 	<h1 class="news_paper_title">
 		<a href="#">Global Observer</a>
-  <h1>Connecting views of the globe.</h1>
+  <h1>Connecting views of the globe</h1>
 	</h1>
 
 	<div class="dark_mode_container">
