--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merged Project</title>
+    <title>Global Observer Press</title>
     <style>
         /* Earth Project CSS */
 body {
