--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@ figure {
 <header>
 	<h1 class="news_paper_title">
 		<a href="#">Global Observer</a>
-  <h1>Connecting views of the globe</h1>
+  <h1>connecting views of the globe</h1>
+  <h2>Our mission: Bringing the most visionary ideas about business and investment from the world.</h2>
 	</h1>
 
 	<div class="dark_mode_container">
