update the page

--- a/index.html
+++ b/index.html
@@ -396,7 +396,6 @@ figure {
 	<h1 class="news_paper_title">
 		<a href="#">Global Observer</a>
   <h1>connecting views of the globe</h1>
-  <h2>Our mission: Bringing the most visionary ideas about business and investment from the world.</h2>
 	</h1>
 
 	<div class="dark_mode_container">
@@ -405,6 +404,10 @@ figure {
 			<div class="slider round"></div>
 		</label>
 	</div>
+
+  <div class="news_paper_title">
+    <h3>Our mission: Bringing the most visionary ideas about business and investment from the world.</h3>
+  </div>
 
 	<div class="news_paper_location">World's Top News - <span id="time"></span></div>
 </header>
