--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ figure {
     <h3>Our mission: Bringing the most visionary ideas about business and investment from the world.</h3>
   </div>
 
-	<div class="news_paper_location">World's Top News - <span id="time"></span></div>
+	<div class="news_paper_location">Our Opinions - <span id="time"></span></div>
 </header>
 
 <section class="the-grid-section">
