--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ figure {
 	</div>
 
   <div class="news_paper_title">
-    <h3>Our mission: Bringing the most visionary ideas about business and investment from the world.</h3>
+    <h3>Our mission: Generating the most visionary ideas about business and investment about the world.</h3>
   </div>
 
 	<div class="news_paper_location">Our Opinions - <span id="time"></span></div>
