--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@ p {
     .dark_mode_switch {
         display: inline-block;
         height: 34px;
-        position: absolute;
-        top: -125px;
-        right: 0;
+        position: relative;
+        align-items: center;
         width: 60px;
         max-width: 60px;
         
@@ -396,15 +395,15 @@ figure {
 <a href="#">Global Observer</a>
 <h1>connecting views of the globe</h1>
 </h1>
-<div class="dark_mode_container">
-<label class="dark_mode_switch" for="checkbox">
-<input id="checkbox" type="checkbox"/>
-<div class="slider round"></div>
-</label>
-</div>
 <div class="news_paper_title">
 <h3>Our mission: Generating the most visionary ideas about business and investment from around the world.</h3>
 </div>
+<div class="dark_mode_container">
+  <label class="dark_mode_switch" for="checkbox">
+  <input id="checkbox" type="checkbox"/>
+  <div class="slider round"></div>
+  </label>
+  </div>
 <div class="news_paper_location">Our Opinions - <span id="time"></span></div>
 </header>
 <section class="the-grid-section">
