push to the git with the summary edits

--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ header {
 figure {
     cursor: pointer;
     margin: 0 0 20px;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
+    -webkit-filter: grayscale(50%);
+    filter: grayscale(50%);
     transition: var(--transition-animation);
 
     img {
@@ -399,11 +399,11 @@ figure {
 <h3>Our mission: Generating the most visionary ideas about business and investment from around the world.</h3>
 </div>
 <div class="dark_mode_container">
-  <label class="dark_mode_switch" for="checkbox">
-  <input id="checkbox" type="checkbox"/>
-  <div class="slider round"></div>
-  </label>
-  </div>
+<label class="dark_mode_switch" for="checkbox">
+<input id="checkbox" type="checkbox"/>
+<div class="slider round"></div>
+</label>
+</div>
 <div class="news_paper_location">Our Opinions - <span id="time"></span></div>
 </header>
 <section class="the-grid-section">
@@ -411,15 +411,15 @@ figure {
 <div class="the-grid-content" id="article-1">
 <div class="headline">
 <a href="https://en.wikipedia.org/wiki/Northern_Ndebele_people" target="_blank">
-<h2 class="title">Northern Ndebele people</h2>
-<h3 class="writer">From Wikipedia, the free encyclopedia</h3>
+<h2 class="title">AI Investment Landscape: Opportunities and Strategies</h2>
+<h3 class="writer">internal member 1</h3>
 <figure>
-<img alt="" src="https://source.unsplash.com/kGgsoEU4EIw/1280x720"/>
-<figcaption><a href="https://unsplash.com/@kreatedmedia" target="_blank">Image Source: Kreated Media</a></figcaption>
+<img alt="" src=".\main pictures\article 1.webp"/>
+<figcaption><a href="https://unsplash.com/@kreatedmedia" target="_blank">Image Source: Open AI</a></figcaption>
 </figure>
 </a>
 </div>
-<p>The Northern Ndebele people (Northern Ndebele: amaNdebele) are a Bantu-speaking nation and ethnic group in Southern Africa, who share a common Ndebele culture and Ndebele language (isiNdebele). The Northern Ndebele were historically referred to as the Matabele which derives from the Sesotho expression thebele...</p>
+<p>Examining the powerful role of Artificial Intelligence (AI) in finance, we highlight NVIDIA's impressive stock growth, explore the teamwork-driven Ultraman's $70K Plan, look into the rewarding strategy of investing in AI-centric companies, and discuss how current interest rates positively affect tech stocks.</p>
 <div class="button">
 <a href="https://en.wikipedia.org/wiki/Northern_Ndebele_people" target="_blank">Read More</a>
 </div>
@@ -429,15 +429,15 @@ figure {
 <div class="the-grid-content" id="article-2">
 <div class="headline">
 <a href="https://en.wikipedia.org/wiki/Shaka" target="_blank">
-<h2 class="title">Shaka kaSenzangakhona</h2>
-<h3 class="writer">From Wikipedia, the free encyclopedia</h3>
+<h2 class="title">Insights from Japan Trip: Travel Experiences and the Silver Economy</h2>
+<h3 class="writer">internal member 2</h3>
 <figure>
-<img alt="" src="https://source.unsplash.com/2p9waQFqeEY/1280x720"/>
-<figcaption><a href="https://unsplash.com/@phillipgold" target="_blank">Image Source: Phillip Goldsberry</a></figcaption>
+<img alt="" src=".\main pictures\article 2.webp"/>
+<figcaption><a href="https://unsplash.com/@phillipgold" target="_blank">Image Source: Open AI</a></figcaption>
 </figure>
 </a>
 </div>
-<p>He was born in the lunar month of uNtulikazi (July) in the year of 1787 near present-day Melmoth, KwaZulu-Natal Province. Due to persecution as a result of his illegitimacy, Shaka spent his childhood in his mother's settlements where he was initiated into an ibutho lempi (fighting unit). In his early days, Shaka served as a warrior...</p>
+<p>Japan's aging population shapes its workforce, from elderly baggage handlers to taxi drivers. The emerging Silver Economy, highlighted by rising elderly care costs partly funded by the government, offers new opportunities in sectors like travel. This trend reflects broader East Asian challenges, including declining birth rates and the retirement of the baby boomer generation.</p>
 <div class="button">
 <a href="https://en.wikipedia.org/wiki/Shaka" target="_blank">Read More</a>
 </div>
