--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ figure {
 <div class="headline">
 <a href="https://en.wikipedia.org/wiki/Northern_Ndebele_people" target="_blank">
 <h2 class="title">AI Investment Landscape: Opportunities and Strategies</h2>
-<h3 class="writer">internal member 1</h3>
+<h3 class="writer">internal member 1: Feb 21th, 2024</h3>
 <figure>
 <img alt="" src=".\main pictures\article 1.webp"/>
 <figcaption><a href="https://unsplash.com/@kreatedmedia" target="_blank">Image Source: Open AI</a></figcaption>
@@ -430,7 +430,7 @@ figure {
 <div class="headline">
 <a href="https://en.wikipedia.org/wiki/Shaka" target="_blank">
 <h2 class="title">Insights from Japan Trip: Travel Experiences and the Silver Economy</h2>
-<h3 class="writer">internal member 2</h3>
+<h3 class="writer">internal member 2: Feb 21th, 2024</h3>
 <figure>
 <img alt="" src=".\main pictures\article 2.webp"/>
 <figcaption><a href="https://unsplash.com/@phillipgold" target="_blank">Image Source: Open AI</a></figcaption>
@@ -447,15 +447,15 @@ figure {
 <div class="the-grid-content" id="article-3">
 <div class="headline">
 <a href="https://en.wikipedia.org/wiki/Mfecane" target="_blank">
-<h2 class="title">Mfecane</h2>
-<h3 class="writer">From Wikipedia, the free encyclopedia</h3>
+<h2 class="title">Sora and Personal IP: Balancing Innovation and Regulation</h2>
+<h3 class="writer">internal member 3: Feb 21th, 2024</h3>
 <figure>
-<img alt="" src="https://source.unsplash.com/phCxE6VblZk/1280x720"/>
+<img alt="" src=".\main pictures\article 3.webp"/>
 <figcaption><a href="https://unsplash.com/@josephanson" target="_blank">Image Source: Joseph Anson</a></figcaption>
 </figure>
 </a>
 </div>
-<p>Mfecane (isiZulu, Zulu pronunciation: [m̩fɛˈkǀaːne]), also known by the Sesotho name Difaqane or Lifaqane (all meaning "crushing, scattering, forced dispersal, forced migration"), was a period of widespread chaos and warfare among indigenous ethnic communities in southern Africa during the period between 1815 and about 1840.</p>
+<p>As AI technology like ChatGPT becomes increasingly capable of creating content, concerns about the protection of personal intellectual property (IP) have prompted government oversight mechanisms. The rising phenomenon of 'Anti-ChatGPT' reflects the tensions between the freedom of AI use and the need to safeguard individual creativity. With 'Hallucination' constraints shaping the deployment of AI, the discussion on regulatory frameworks is intensifying to ensure technological advancements respect personal IP rights while fostering innovation.</p>
 <div class="button">
 <a href="https://en.wikipedia.org/wiki/Mfecane" target="_blank">Read More</a>
 </div>
@@ -465,15 +465,15 @@ figure {
 <div class="the-grid-content" id="article-4">
 <div class="headline">
 <a href="https://en.wikipedia.org/wiki/Anglo-Zulu_War" target="_blank">
-<h2 class="title">Anglo-Zulu War</h2>
-<h3 class="writer">From Wikipedia, the free encyclopedia</h3>
+<h2 class="title">2023 U.S. Economic Retrospective: Resilience Amid Challenges</h2>
+<h3 class="writer">internal member 4: Feb 21th, 2024</h3>
 <figure>
-<img alt="" src="https://source.unsplash.com/8US1_1QMHi0/1280x720"/>
+<img alt="" src=".\main pictures\article 4.webp"/>
 <figcaption><a href="https://unsplash.com/@britishlibrary" target="_blank">Image Source: British Library</a></figcaption>
 </figure>
 </a>
 </div>
-<p>The Anglo-Zulu War was fought in 1879 between the British Empire and the Zulu Kingdom. Following Lord Carnarvon's successful introduction of federation in Canada, it was thought that similar political effort, coupled with military campaigns, might succeed with the African kingdoms, tribal areas and Boer republics in South Africa.</p>
+<p>In 2023, the United States experienced a robust economic period, characterized by significant resilience. The year marked a transition into structural inflation, posing unique challenges to both businesses and consumers. Concurrently, interest rates witnessed a substantial rise, reflecting efforts to stabilize the economy and curb inflationary pressures. A noteworthy development was the reduction in the U.S. trade deficit, largely attributed to the strengthened North American Free Trade Zone, signaling a shift in international trade dynamics and domestic economic strategies.</p>
 <div class="button">
 <a href="https://en.wikipedia.org/wiki/Anglo-Zulu_War" target="_blank">Read More</a>
 </div>
