--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ figure {
 <h3 class="writer">internal member 3: Feb 21th, 2024</h3>
 <figure>
 <img alt="" src=".\main pictures\article 3.webp"/>
-<figcaption><a href="https://unsplash.com/@josephanson" target="_blank">Image Source: Joseph Anson</a></figcaption>
+<figcaption><a href="https://unsplash.com/@josephanson" target="_blank">Image Source: Open AI</a></figcaption>
 </figure>
 </a>
 </div>
@@ -469,7 +469,7 @@ figure {
 <h3 class="writer">internal member 4: Feb 21th, 2024</h3>
 <figure>
 <img alt="" src=".\main pictures\article 4.webp"/>
-<figcaption><a href="https://unsplash.com/@britishlibrary" target="_blank">Image Source: British Library</a></figcaption>
+<figcaption><a href="https://unsplash.com/@britishlibrary" target="_blank">Image Source: Open AI</a></figcaption>
 </figure>
 </a>
 </div>
