--- a/index.html
+++ b/index.html
@@ -464,18 +464,18 @@ figure {
 <article class="the-grid">
 <div class="the-grid-content" id="article-4">
 <div class="headline">
-<a href="https://en.wikipedia.org/wiki/Anglo-Zulu_War" target="_blank">
+<a href="./subpages/new_template_name.html" target="_blank">
 <h2 class="title">2023 U.S. Economic Retrospective: Resilience Amid Challenges</h2>
 <h3 class="writer">internal member 4: Feb 21th, 2024</h3>
 <figure>
-<img alt="" src=".\main pictures\article 4.webp"/>
+<img alt="" src="./main pictures/article 4.webp"/>
 <figcaption><a href="https://unsplash.com/@britishlibrary" target="_blank">Image Source: Open AI</a></figcaption>
 </figure>
 </a>
 </div>
 <p>In 2023, the United States experienced a robust economic period, characterized by significant resilience. The year marked a transition into structural inflation, posing unique challenges to both businesses and consumers. Concurrently, interest rates witnessed a substantial rise, reflecting efforts to stabilize the economy and curb inflationary pressures. A noteworthy development was the reduction in the U.S. trade deficit, largely attributed to the strengthened North American Free Trade Zone, signaling a shift in international trade dynamics and domestic economic strategies.</p>
 <div class="button">
-<a href="https://en.wikipedia.org/wiki/Anglo-Zulu_War" target="_blank">Read More</a>
+<a href="./subpages/new_template_name.html" target="_blank">Read More</a>
 </div>
 </div>
 </article>
