--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <title>Global Observer Press</title>
-        <link rel="stylesheet" href="css/styles.css"> <!-- 引入CSS文件 -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- 引入Font Awesome -->
-    </head>
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Global Observer Press</title>
+    <link rel="stylesheet" href="css/styles.css"> <!-- 引入CSS文件 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- 引入Font Awesome -->
+</head>
 <body>
     <canvas height="700" width="700"></canvas>
     <div id="routeInfo"></div>
@@ -14,39 +14,41 @@
     <script src="https://unpkg.com/topojson-client@3.0.0/dist/topojson-client.min.js"></script>
     <script src="https://unpkg.com/topojson-simplify@3.0.2/dist/topojson-simplify.min.js"></script>
     <script src="https://unpkg.com/geodesy@1.1.3/latlon-spherical.js"></script>
-<header>
-    <h1 class="news_paper_title">
-        <a href="#">Global Observer</a>
-        <h1>connecting views of the globe</h1>
-    </h1>
-    <div class="news_paper_title">
-        <h3>Our mission: Generating the most visionary ideas about business and investment from around the world.</h3>
-    </div>
-    <div class="dark_mode_container">
-        <label class="dark_mode_switch" for="checkbox">
-            <input id="checkbox" type="checkbox"/>
-            <div class="slider round"></div>
-        </label>
-    </div>
-    <div class="news_paper_location">Our Opinions - <span id="time"></span></div>
     
-    <!-- 语言选择器 -->
-    <div class="language-switcher">
-        <label for="language-select">
-            <i class="fas fa-globe"></i> <!-- 地球图标 -->
-        </label>
-        <select id="language-select" onchange="switchLanguage(this.value)">
-            <option value="en">English</option>
-            <option value="zh">中文</option>
-            <option value="es">Español</option>
-        </select>
-    </div>
-</header>
+    <header>
+        <h1 class="news_paper_title">
+            <a id="page-title" href="#">Global Observer</a>
+            <h1 id="subtitle">connecting views of the globe</h1>
+        </h1>
+        <div class="news_paper_title">
+            <h3 id="mission-statement">Our mission: Generating the most visionary ideas about business and investment from around the world.</h3>
+        </div>
+        <div class="dark_mode_container">
+            <label class="dark_mode_switch" for="checkbox">
+                <input id="checkbox" type="checkbox"/>
+                <div class="slider round"></div>
+            </label>
+        </div>
+        <div class="news_paper_location"><span id="time"></span></div>
+        
+        <!-- 语言选择器 -->
+        <div class="language-switcher">
+            <label for="language-select">
+                <i class="fas fa-globe"></i> <!-- 地球图标 -->
+            </label>
+            <select id="language-select" onchange="switchLanguage(this.value)">
+                <option value="en">English</option>
+                <option value="zh">中文</option>
+                <option value="es">Español</option>
+            </select>
+        </div>
+    </header>
 
-<section class="the-grid-section" id="articles-section">
-    <!-- 文章块将由JavaScript动态生成 -->
-</section>
+    <section class="the-grid-section" id="articles-section">
+        <!-- 文章块将由JavaScript动态生成 -->
+    </section>
 
-<script src="js/script.js"></script> <!-- 引入JavaScript文件 -->
+    <script src="js/script.js"></script> <!-- 加载主要的脚本 -->
+    <script src="js/earth.js"></script> <!-- 加载地球相关脚本 -->
 </body>
 </html>
