change the button

--- a/page_templates/article-template.html
+++ b/page_templates/article-template.html
@@ -48,7 +48,7 @@
 
     <!-- 返回主页的悬浮按钮，使用菜单图标 -->
     <a href="../index.html" class="article_back_to_home">
-        <i class="fas fa-bars"></i>
+        <i class="fas fa-arrow-left"></i>
     </a>
 
     <script src="../js/article_scripts.js"></script> <!-- 加载文章脚本 -->
