reduce the reliance on outside data, add more informative icons

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h3 id="mission-statement">Our mission: Generating the most visionary ideas about business and investment from around the world.</h3>
         </div>
         <div class="dark_mode_container">
+            <i class="fa-solid fa-circle-half-stroke"style="padding-right: 4px;"></i>
             <label class="dark_mode_switch" for="checkbox">
                 <input id="checkbox" type="checkbox"/>
                 <div class="slider round"></div>
@@ -32,7 +33,7 @@
         <div class="news_paper_location"><span id="time"></span></div>
         <div class="language-switcher">
             <label for="language-select">
-                <i class="fas fa-globe"></i>
+                <i class="fas fa-globe"style="padding-right: 4px;"></i><i class="fa-solid fa-language"></i>
             </label>
             <select id="language-select" onchange="switchLanguage(this.value)">
                 <option value="en">English</option>
