--- a/page_templates/article-template.html
+++ b/page_templates/article-template.html
@@ -16,20 +16,21 @@
             <a id="page-title" href="#">Global Observer</a>
             <h1 id="subtitle">connecting views of the globe</h1>
         </h1>
+        <div class="article_news_paper_location">
+            <h3 id="mission-statement">Our mission: Generating the most visionary ideas about business and investment from around the world.</h3>
+        </div>
         <div class="dark_mode_container">
+            <i class="fa-solid fa-circle-half-stroke"style="padding-right: 4px;"></i>
             <label class="dark_mode_switch" for="checkbox">
                 <input id="checkbox" type="checkbox"/>
                 <div class="slider round"></div>
             </label>
         </div>
-        <div class="article_news_paper_location">
-            <h3 id="mission-statement">Our mission: Generating the most visionary ideas about business and investment from around the world.</h3>
-        </div>
         <div class="news_paper_location"></span></div>
         <!-- 语言选择器 -->
         <div class="language-switcher">
             <label for="language-select">
-                <i class="fas fa-globe"></i>
+                <i class="fas fa-globe"style="padding-right: 4px;"></i><i class="fa-solid fa-language"></i>
             </label>
             <select id="language-select">
                 <option value="en">English</option>
