--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <canvas height="700" width="700"></canvas>
     <div id="routeInfo"></div>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://unpkg.com/topojson-client@3.0.0/dist/topojson-client.min.js"></script>
-    <script src="https://unpkg.com/topojson-simplify@3.0.2/dist/topojson-simplify.min.js"></script>
-    <script src="https://unpkg.com/geodesy@1.1.3/latlon-spherical.js"></script>
+    <script src="./js/earth_js/d3.v5.min.js"></script>
+    <script src="./js/earth_js/topojson-client.min.js"></script>
+    <script src="./js/earth_js/topojson-simplify.min.js"></script>
+    <script src="./js/earth_js/latlon-spherical.js"></script>
     
     <header>
         <h1 class="news_paper_title">
