add abrabic to support middle east

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <option value="fr">Français</option>
                 <option value="de">Deutsch</option>
                 <option value="ja">日本語</option>
+                <option value="ar">العربية</option>
             </select>
         </div>
     </header>
