add index page link

--- a/page_templates/article-template.html
+++ b/page_templates/article-template.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1 class="article_news_paper_title">
-            <a id="page-title" href="#">Global Observer</a>
+            <a id="page-title" href="/index.html">Global Observer</a>
             <h1 id="subtitle">connecting views of the globe</h1>
         </h1>
         <div class="article_news_paper_location">
