--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Global Observer Press</title>
     <link rel="stylesheet" href="css/styles.css"> <!-- 引入CSS文件 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- 引入Font Awesome -->
+    <link rel="shortcut icon" href="favion.png" type="image/x-icon">
 </head>
 <body>
     <canvas height="700" width="700"></canvas>
