--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta name="google-site-verification" content="6gXSTcnRhjWbnPUhvnZIXd2qTQhgJcznDkjMBRfizzI" />
     <title>Global Observer Press</title>
     <link rel="stylesheet" href="css/styles.css"> <!-- 引入CSS文件 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- 引入Font Awesome -->
