--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Global Observer Press</title>
     <link rel="stylesheet" href="css/styles.css"> <!-- 引入CSS文件 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- 引入Font Awesome -->
-    <link rel="shortcut icon" href="favion.png" type="image/x-icon">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="/favion/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favion/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favion/apple-touch-icon.png">
+    <link rel="manifest" href="/favion/site.webmanifest">
+
 </head>
 <body>
     <canvas height="700" width="700"></canvas>
